Fix badge wrap error.

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -253,7 +253,8 @@ footer {
 .myresearch-menu a > .badge { float: right; }
 .myresearch-menu .status {
   float: right;
-  display: block;
+  display: flex;
+  flex: none;
 }
 .myresearch-menu .status {
   .ok,
